WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105085
Pass debuggerTaskMode as a parameter in WorkerScriptDebugServer constructor
https://bugs.webkit.org/show_bug.cgi?id=105085
Summary
Pass debuggerTaskMode as a parameter in WorkerScriptDebugServer constructor
Seokju Kwon
Reported
2012-12-15 01:36:33 PST
Build break occurs when ENABLE_INSPECTOR is disabled. (Source/WebCore/bindings/js/WorkerScriptDebugServer.cpp:96:82: error: ‘WorkerDebuggerAgent’ has not been declared) And Use WorkerScriptDebugServer::debuggerTaskMode instead of WorkerDebuggerAgent::debuggerTaskMode.
Attachments
Patch
(1.81 KB, patch)
2012-12-15 01:43 PST
,
Seokju Kwon
no flags
Details
Formatted Diff
Diff
Patch
(6.66 KB, patch)
2012-12-18 07:19 PST
,
Seokju Kwon
no flags
Details
Formatted Diff
Diff
Patch
(6.66 KB, patch)
2012-12-19 01:34 PST
,
Seokju Kwon
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Seokju Kwon
Comment 1
2012-12-15 01:43:12 PST
Created
attachment 179582
[details]
Patch
Seokju Kwon
Comment 2
2012-12-17 18:55:49 PST
yurys : What do you think about it?
Yury Semikhatsky
Comment 3
2012-12-17 21:16:08 PST
Comment on
attachment 179582
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=179582&action=review
> Source/WebCore/bindings/js/WorkerScriptDebugServer.cpp:96 > + result = m_workerContext->thread()->runLoop().runInMode(m_workerContext, WorkerScriptDebugServer::debuggerTaskMode);
We should leave only one of WorkerDebuggerAgent::debuggerTaskMode and WorkerScriptDebugServer::debuggerTaskMode and remove other one. It'd prefer leaving WorkerDebuggerAgent::debuggerTaskMode but WorkerScriptDebugServer should not depend on WorkerDebuggerAgent as dependency is in the opposite direction. To overcome this we way pass debuggerTaskMode as a parameter in WorkerScriptDebugServer constructor.
Seokju Kwon
Comment 4
2012-12-18 07:19:20 PST
Created
attachment 179937
[details]
Patch
Seokju Kwon
Comment 5
2012-12-18 18:00:32 PST
(In reply to
comment #3
)
> (From update of
attachment 179582
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=179582&action=review
> > > Source/WebCore/bindings/js/WorkerScriptDebugServer.cpp:96 > > + result = m_workerContext->thread()->runLoop().runInMode(m_workerContext, WorkerScriptDebugServer::debuggerTaskMode); > > We should leave only one of WorkerDebuggerAgent::debuggerTaskMode and WorkerScriptDebugServer::debuggerTaskMode and remove other one. It'd prefer leaving WorkerDebuggerAgent::debuggerTaskMode but WorkerScriptDebugServer should not depend on WorkerDebuggerAgent as dependency is in the opposite direction. To overcome this we way pass debuggerTaskMode as a parameter in WorkerScriptDebugServer constructor.
As you said, I have fixed them.
Yury Semikhatsky
Comment 6
2012-12-18 23:45:13 PST
Comment on
attachment 179937
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=179937&action=review
> Source/WebCore/bindings/js/WorkerScriptDebugServer.h:45 > + WorkerScriptDebugServer(WorkerContext*, const String);
const String -> const String&
> Source/WebCore/bindings/v8/WorkerScriptDebugServer.h:50 > + WorkerScriptDebugServer(WorkerContext*, const String);
const String -> const String&
Yury Semikhatsky
Comment 7
2012-12-18 23:45:45 PST
(In reply to
comment #6
)
> const String -> const String&
Apart from that looks good to me.
Seokju Kwon
Comment 8
2012-12-19 01:34:41 PST
Created
attachment 180118
[details]
Patch
Seokju Kwon
Comment 9
2012-12-19 01:37:39 PST
Comment on
attachment 180118
[details]
Patch Fixed it. Thank you for your review.
WebKit Review Bot
Comment 10
2012-12-19 02:40:23 PST
Comment on
attachment 180118
[details]
Patch Clearing flags on attachment: 180118 Committed
r138135
: <
http://trac.webkit.org/changeset/138135
>
WebKit Review Bot
Comment 11
2012-12-19 02:40:27 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug