Pass debuggerTaskMode as a parameter in WorkerScriptDebugServer constructor https://bugs.webkit.org/show_bug.cgi?id=105085

Patch by Seokju Kwon <seokju.kwon@gmail.com> on 2012-12-19
Reviewed by Yury Semikhatsky.

Leave WorkerDebuggerAgent::debuggerTaskMode
and remove WorkerScriptDebugServer::debuggerTaskMode.

No new tests, no behavior change.

* bindings/js/WorkerScriptDebugServer.cpp:
(WebCore::WorkerScriptDebugServer::WorkerScriptDebugServer):
(WebCore::WorkerScriptDebugServer::runEventLoopWhilePaused):
* bindings/js/WorkerScriptDebugServer.h:
(WorkerScriptDebugServer):
* bindings/v8/WorkerScriptDebugServer.cpp:
(WebCore::WorkerScriptDebugServer::WorkerScriptDebugServer):
(WebCore::WorkerScriptDebugServer::runMessageLoopOnPause):
* bindings/v8/WorkerScriptDebugServer.h:
(WorkerScriptDebugServer):
* inspector/WorkerDebuggerAgent.cpp:
(WebCore::WorkerDebuggerAgent::WorkerDebuggerAgent):

Canonical link: https://commits.webkit.org/123637@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138135 268f45cc-cd09-0410-ab3c-d52691b4dbfc