Source/WebCore/bindings/js/WorkerScriptDebugServer.h
@@ -42,13 +42,11 @@ class WorkerContext;
 class WorkerScriptDebugServer : public ScriptDebugServer {
     WTF_MAKE_NONCOPYABLE(WorkerScriptDebugServer);
 public:
-    explicit WorkerScriptDebugServer(WorkerContext*);
+    WorkerScriptDebugServer(WorkerContext*, const String&);
     ~WorkerScriptDebugServer() { }
 
     void addListener(ScriptDebugListener*);
     void removeListener(ScriptDebugListener*);
-
-    static const char* debuggerTaskMode;
 
     void interruptAndRunTask(PassOwnPtr<ScriptDebugServer::Task>);
 
@@ -67,6 +65,7 @@ private:
 
     WorkerContext* m_workerContext;
     ListenerSet m_listeners;
+    String m_debuggerTaskMode;
 };
 
 } // namespace WebCore
